# Hmardic

hmardic/: README.md  pyproject.toml
hmardic/src/hmardic/: __init__.py  binning.py  cache.py  cli.py  cli_old.py  config.py  io.py  nonspecific.py  optimization.py  overlaps.py  pipeline.py  pipeline_old.py  preprocess.py
hmardic/src/hmardic/.ipynb_checkpoints/: binning-checkpoint.py  cis-checkpoint.py  cli-checkpoint.py  cli_old-checkpoint.py  config-checkpoint.py  merge-checkpoint.py  nonspecific-checkpoint.py  optimization-checkpoint.py  pipeline_old-checkpoint.py
hmardic/src/hmardic/hmm/: __init__.py  poisson.py
hmardic/src/hmardic/hmm/__pycache__/: __init__._backward_nb-86.py310.1.nbc  __init__._backward_nb-86.py310.nbi  __init__._forward_nb-69.py310.1.nbc  __init__._forward_nb-69.py310.nbi  __init__._viterbi_nb-130.py310.1.nbc  __init__._viterbi_nb-130.py310.nbi  __init__._xi_sum_nb-101.py310.1.nbc  __init__._xi_sum_nb-101.py310.nbi  poisson._backward_nb-48.py310.1.nbc  poisson._backward_nb-48.py310.nbi  poisson._forward_nb-29.py310.1.nbc  poisson._forward_nb-29.py310.nbi  poisson._viterbi_nb-99.py310.1.nbc  poisson._viterbi_nb-99.py310.nbi  poisson._xi_sum_nb-65.py310.1.nbc  poisson._xi_sum_nb-65.py310.nbi
hmardic/tests/: test_hmm.py
